# btc-trader

./: .gitignore  README.md  btc_trades.csv  pyproject.toml
btc_trader/: __init__.py  auto_trader_btc.py  backtest.py  binance.py  db.py  entry_exit.py  journal.py  kalshi_btc.py  risk.py  signals.py  trailing_stop.py
btc_trader/kalshi/: auth.py  client.py
docs/: 2026-04-07-btc-trader-upgrade-design.md
tests/: test_btc_backtest.py  test_btc_entry_exit.py  test_btc_journal.py  test_btc_risk.py  test_btc_signals.py
